[package]
name = "todo_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
crossterm = "0.28.1"
directories = "6.0.0"
promptuity = "0.0.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
uuid = { version = "1.13.1", features = ["v4"] }

